tests/compiletests/ui/lang/asm/block_tracking_fail.stderr
error: `noreturn` requires a terminator at the end
   --> $DIR/block_tracking_fail.rs:
    |
    |         asm!("", options(noreturn));
    |               ^

error: trailing terminator `OpUnreachable` requires `options(noreturn)`
   --> $DIR/block_tracking_fail.rs:
    |
    |         asm!("OpUnreachable");
    |               ^^^^^^^^^^^^^

error: expected `OpLabel` after terminator `OpKill`
   --> $DIR/block_tracking_fail.rs:
    |
    |             "OpKill",
    |              ^^^^^^

error: aborting due to 3 previous errors

